accelerated-domains: add hangzhouboiler.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39628,6 +39628,7 @@ server=/hangyan.co/114.114.114.114
 server=/hangye365.com/114.114.114.114
 server=/hangyecloud.com/114.114.114.114
 server=/hangzhiqiao.com/114.114.114.114
+server=/hangzhouboiler.com/114.114.114.114
 server=/hangzhoufcw.com/114.114.114.114
 server=/hangzhouluohu.com/114.114.114.114
 server=/hangzhoumengfa.com/114.114.114.114
