accelerated-domains: add hzliangdong.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45068,6 +45068,7 @@ server=/hzkshx.com/114.114.114.114
 server=/hzkuangxiangzi.com/114.114.114.114
 server=/hzlange.com/114.114.114.114
 server=/hzleshun.com/114.114.114.114
+server=/hzliangdong.com/114.114.114.114
 server=/hzlingxing.com/114.114.114.114
 server=/hzljlyy.com/114.114.114.114
 server=/hzlqgroup.com/114.114.114.114
