--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71675,6 +71675,7 @@ server=/repliquemontresdeluxe.fr/114.114.114.114
 server=/repliquesuisse.co/114.114.114.114
 server=/reportify.cc/114.114.114.114
 server=/reportrc.com/114.114.114.114
+server=/reprogenix.com/114.114.114.114
 server=/reptilesworld.com/114.114.114.114
 server=/reqable.com/114.114.114.114
 server=/reqwevf3.fun/114.114.114.114
