accelerated-domains: add topwinchance.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82753,6 +82753,7 @@ server=/topwalk.com/114.114.114.114
 server=/topway.org/114.114.114.114
 server=/topwaysoft.com/114.114.114.114
 server=/topwidgets.com/114.114.114.114
+server=/topwinchance.com/114.114.114.114
 server=/topwinfo.com/114.114.114.114
 server=/topxgun.com/114.114.114.114
 server=/topxiu.com/114.114.114.114
