--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85057,6 +85057,7 @@ server=/uw9.net/114.114.114.114
 server=/uwa4d.com/114.114.114.114
 server=/uwan.com/114.114.114.114
 server=/uwenku.com/114.114.114.114
+server=/uwntek.com/114.114.114.114
 server=/uworter.com/114.114.114.114
 server=/ux18.com/114.114.114.114
 server=/ux6.com/114.114.114.114
