accelerated-domains: add lxhz-avionics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58190,6 +58190,7 @@ server=/lxhkair.com/114.114.114.114
 server=/lxhro.com/114.114.114.114
 server=/lxhuwai.com/114.114.114.114
 server=/lxhuwai.net/114.114.114.114
+server=/lxhz-avionics.com/114.114.114.114
 server=/lxi.me/114.114.114.114
 server=/lxin007.com/114.114.114.114
 server=/lxjapp.com/114.114.114.114
