accelerated-domains: add hczl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40623,6 +40623,7 @@ server=/hcyxxx.com/114.114.114.114
 server=/hcyzdc.com/114.114.114.114
 server=/hczc.com/114.114.114.114
 server=/hczfgjj.com/114.114.114.114
+server=/hczl.com/114.114.114.114
 server=/hczm1.com/114.114.114.114
 server=/hczm2.com/114.114.114.114
 server=/hczq.com/114.114.114.114
