accelerated-domains: add hzhf.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45022,6 +45022,7 @@ server=/hzhanbo.com/114.114.114.114
 server=/hzhcloud.com/114.114.114.114
 server=/hzhehua.com/114.114.114.114
 server=/hzhengtong.com/114.114.114.114
+server=/hzhf.com/114.114.114.114
 server=/hzhfzx.com/114.114.114.114
 server=/hzhike.com/114.114.114.114
 server=/hzhisoft.com/114.114.114.114
