accelerated-domains: add hzkaiming.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45063,6 +45063,7 @@ server=/hzjxapp.com/114.114.114.114
 server=/hzjxmd.com/114.114.114.114
 server=/hzjywl.net/114.114.114.114
 server=/hzjzmed.com/114.114.114.114
+server=/hzkaiming.com/114.114.114.114
 server=/hzkayo.com/114.114.114.114
 server=/hzkcck.com/114.114.114.114
 server=/hzkln.com/114.114.114.114
