--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -50296,6 +50296,7 @@ server=/jkkefv.com/114.114.114.114
 server=/jkl6.com/114.114.114.114
 server=/jkllbd.com/114.114.114.114
 server=/jklsjm.com/114.114.114.114
+server=/jknanotech.com/114.114.114.114
 server=/jknmthwd.xyz/114.114.114.114
 server=/jkouu.com/114.114.114.114
 server=/jkpan.cc/114.114.114.114
