--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55575,6 +55575,7 @@ server=/lesjob.com/114.114.114.114
 server=/lesjulo.com/114.114.114.114
 server=/leslie-cheung.com/114.114.114.114
 server=/lesofn.com/114.114.114.114
+server=/lesonccl.com/114.114.114.114
 server=/lesou.net/114.114.114.114
 server=/lespetitsfiguiers.com/114.114.114.114
 server=/lesports.com/114.114.114.114
