accelerated-domains: add raycloud.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -71284,6 +71284,7 @@ server=/ray-joy.com/114.114.114.114
 server=/ray1988.com/114.114.114.114
 server=/ray8.cc/114.114.114.114
 server=/raycham.com/114.114.114.114
+server=/raycloud.com/114.114.114.114
 server=/raycom-inv.com/114.114.114.114
 server=/raycuslaser.com/114.114.114.114
 server=/raydonet.com/114.114.114.114
