accelerated-domains: add sci-bioland.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73387,6 +73387,7 @@ server=/scht.cc/114.114.114.114
 server=/schwarzeni.com/114.114.114.114
 server=/schwr.com/114.114.114.114
 server=/schxzx.com/114.114.114.114
+server=/sci-bioland.com/114.114.114.114
 server=/sci-fifans.net/114.114.114.114
 server=/sci-gz.com/114.114.114.114
 server=/sci-hub.ee/114.114.114.114
