accelerated-domains: add tyrbl.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83968,6 +83968,7 @@ server=/tyqxzx.com/114.114.114.114
 server=/tyr8.com/114.114.114.114
 server=/tyrantdb.com/114.114.114.114
 server=/tyrantg.com/114.114.114.114
+server=/tyrbl.com/114.114.114.114
 server=/tyrbw.com/114.114.114.114
 server=/tyread.com/114.114.114.114
 server=/tysdmh.com/114.114.114.114
