--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86891,6 +86891,7 @@ server=/wavideo.tv/114.114.114.114
 server=/wavpub.com/114.114.114.114
 server=/wawacm.com/114.114.114.114
 server=/wawayaya.net/114.114.114.114
+server=/wawayu.tv/114.114.114.114
 server=/wawlhld.com/114.114.114.114
 server=/waxiaoxia.com/114.114.114.114
 server=/waxpi.com/114.114.114.114
