--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94137,6 +94137,7 @@ server=/xy-ddh.com/114.114.114.114
 server=/xy-display.com/114.114.114.114
 server=/xy-invite.com/114.114.114.114
 server=/xy-mp.com/114.114.114.114
+server=/xy-technology.com/114.114.114.114
 server=/xy.com/114.114.114.114
 server=/xy007.net/114.114.114.114
 server=/xy120.net/114.114.114.114
