--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35321,6 +35321,7 @@ server=/goulew.com/114.114.114.114
 server=/goulong.com/114.114.114.114
 server=/goumee.com/114.114.114.114
 server=/goumin.com/114.114.114.114
+server=/goupautomation.com/114.114.114.114
 server=/goupsec.com/114.114.114.114
 server=/goupuzi.com/114.114.114.114
 server=/gourmet114.com/114.114.114.114
