--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44938,6 +44938,7 @@ server=/hz9hospital.com/114.114.114.114
 server=/hzaee.com/114.114.114.114
 server=/hzaiguojiang.com/114.114.114.114
 server=/hzairport.com/114.114.114.114
+server=/hzajjt.com/114.114.114.114
 server=/hzallina.com/114.114.114.114
 server=/hzamcare.com/114.114.114.114
 server=/hzapuqi.com/114.114.114.114
