accelerated-domains: add expec-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30230,6 +30230,7 @@ server=/exound.com/114.114.114.114
 server=/exp99.com/114.114.114.114
 server=/expba.com/114.114.114.114
 server=/expdns.net/114.114.114.114
+server=/expec-tech.com/114.114.114.114
 server=/expin.site/114.114.114.114
 server=/expingworld.com/114.114.114.114
 server=/expiredns.net/114.114.114.114
