accelerated-domains: add jdzs.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48530,6 +48530,7 @@ server=/jdzjw.com/114.114.114.114
 server=/jdzmc.com/114.114.114.114
 server=/jdzol.com/114.114.114.114
 server=/jdzol.net/114.114.114.114
+server=/jdzs.com/114.114.114.114
 server=/jdzwang.com/114.114.114.114
 server=/jdzxhyy.com/114.114.114.114
 server=/jea-asia.com/114.114.114.114
