accelerated-domains: add nanosic.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62701,6 +62701,7 @@ server=/nanojanus.com/114.114.114.114
 server=/nanomicro.com/114.114.114.114
 server=/nanomotions.com/114.114.114.114
 server=/nanomxenes.com/114.114.114.114
+server=/nanosic.com/114.114.114.114
 server=/nanpowan.com/114.114.114.114
 server=/nanpu.vip/114.114.114.114
 server=/nanpua.com/114.114.114.114
