--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -65336,6 +65336,7 @@ server=/oborad.com/114.114.114.114
 server=/obowin.com/114.114.114.114
 server=/obsapp.net/114.114.114.114
 server=/obsbot.com/114.114.114.114
+server=/obsidian-display.com/114.114.114.114
 server=/obsworks.com/114.114.114.114
 server=/obyee.com/114.114.114.114
 server=/ocamar.com/114.114.114.114
