--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -94500,6 +94500,7 @@ server=/yac8.com/114.114.114.114
 server=/yac8.net/114.114.114.114
 server=/yace17.com/114.114.114.114
 server=/yachtsinchina.com/114.114.114.114
+server=/yacto-tech.com/114.114.114.114
 server=/yadao8.com/114.114.114.114
 server=/yadashi.com/114.114.114.114
 server=/yadingtour.com/114.114.114.114
