--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101237,6 +101237,7 @@ server=/zhulinedu.com/114.114.114.114
 server=/zhulixiaolie.com/114.114.114.114
 server=/zhulogic.com/114.114.114.114
 server=/zhulong.com/114.114.114.114
+server=/zhulong360.com/114.114.114.114
 server=/zhulongjiang.com/114.114.114.114
 server=/zhulouren.com/114.114.114.114
 server=/zhulu86.com/114.114.114.114
