accelerated-domains: add zj-huawei.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101633,6 +101633,7 @@ server=/zizizizizi.com/114.114.114.114
 server=/zizzs.com/114.114.114.114
 server=/zj-art.com/114.114.114.114
 server=/zj-guojun.com/114.114.114.114
+server=/zj-huawei.com/114.114.114.114
 server=/zj-idc.com/114.114.114.114
 server=/zj-innolight.com/114.114.114.114
 server=/zj-nuolong.com/114.114.114.114
