accelerated-domains: add healzentx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -40773,6 +40773,7 @@ server=/healthjd.com/114.114.114.114
 server=/healthr.com/114.114.114.114
 server=/healthybaike.com/114.114.114.114
 server=/healthych.com/114.114.114.114
+server=/healzentx.com/114.114.114.114
 server=/heanyo.com/114.114.114.114
 server=/hearstchina.com/114.114.114.114
 server=/heart-game.com/114.114.114.114
