accelerated-domains: add wolei-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88981,6 +88981,7 @@ server=/wolaidai.com/114.114.114.114
 server=/wolaidu1.com/114.114.114.114
 server=/wolansw.com/114.114.114.114
 server=/wolegou.net/114.114.114.114
+server=/wolei-tech.com/114.114.114.114
 server=/wolezhibo.com/114.114.114.114
 server=/wolf.cc/114.114.114.114
 server=/wolfbolin.com/114.114.114.114
