accelerated-domains: add dacbiotech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24526,6 +24526,7 @@ server=/dacang.ltd/114.114.114.114
 server=/dacankao.com/114.114.114.114
 server=/dacankao.net/114.114.114.114
 server=/dacaomei.com/114.114.114.114
+server=/dacbiotech.com/114.114.114.114
 server=/daccc.com/114.114.114.114
 server=/daccf.com/114.114.114.114
 server=/dachanet.com/114.114.114.114
