--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44921,6 +44921,7 @@ server=/hz-expo.com/114.114.114.114
 server=/hz-gn.com/114.114.114.114
 server=/hz-hospital.com/114.114.114.114
 server=/hz-jsyg.com/114.114.114.114
+server=/hz-kedi.com/114.114.114.114
 server=/hz-medicine.com/114.114.114.114
 server=/hz-moon.com/114.114.114.114
 server=/hz-shoes.com/114.114.114.114
