accelerated-domains: add hzazh.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44947,6 +44947,7 @@ server=/hzallina.com/114.114.114.114
 server=/hzamcare.com/114.114.114.114
 server=/hzapuqi.com/114.114.114.114
 server=/hzarx.com/114.114.114.114
+server=/hzazh.com/114.114.114.114
 server=/hzbcdp.com/114.114.114.114
 server=/hzbcxg.com/114.114.114.114
 server=/hzbh.com/114.114.114.114
