--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45147,6 +45147,7 @@ server=/hzsswjt.com/114.114.114.114
 server=/hzstad.com/114.114.114.114
 server=/hzstad88.com/114.114.114.114
 server=/hzstar.com/114.114.114.114
+server=/hzstarshuaier.com/114.114.114.114
 server=/hzstlzxyy.com/114.114.114.114
 server=/hzsunup.com/114.114.114.114
 server=/hzswysyy.com/114.114.114.114
