accelerated-domains: add leishenlaser.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -55417,6 +55417,7 @@ server=/leiphone.com/114.114.114.114
 server=/leishen-lidar.com/114.114.114.114
 server=/leishencloud.com/114.114.114.114
 server=/leishenhuyu.com/114.114.114.114
+server=/leishenlaser.com/114.114.114.114
 server=/leishouwin.cc/114.114.114.114
 server=/leisoon.com/114.114.114.114
 server=/leisu.com/114.114.114.114
