--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69100,6 +69100,7 @@ server=/qianhuanhulian.com/114.114.114.114
 server=/qianhuaweb.com/114.114.114.114
 server=/qianinfo.com/114.114.114.114
 server=/qianjia.com/114.114.114.114
+server=/qianjianggas.com/114.114.114.114
 server=/qianjiangwang.com/114.114.114.114
 server=/qianjiapp.com/114.114.114.114
 server=/qianjiawen.net/114.114.114.114
