--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76127,6 +76127,7 @@ server=/shukwai.com/114.114.114.114
 server=/shulanapp.com/114.114.114.114
 server=/shulb.com/114.114.114.114
 server=/shulex-voc.com/114.114.114.114
+server=/shuliangtec.com/114.114.114.114
 server=/shuliao.com/114.114.114.114
 server=/shulidata.com/114.114.114.114
 server=/shuliyun.com/114.114.114.114
