accelerated-domains: add shunlitm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -76160,6 +76160,7 @@ server=/shunhejieshui.com/114.114.114.114
 server=/shunhengkn.com/114.114.114.114
 server=/shunhongny.com/114.114.114.114
 server=/shunhuishou.com/114.114.114.114
+server=/shunlitm.com/114.114.114.114
 server=/shunmi.com/114.114.114.114
 server=/shunnengnet.com/114.114.114.114
 server=/shunong.com/114.114.114.114
