accelerated-domains: add yiubd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96241,6 +96241,7 @@ server=/yitsoftware.com/114.114.114.114
 server=/yituliu.site/114.114.114.114
 server=/yitutech.com/114.114.114.114
 server=/yituyu.com/114.114.114.114
+server=/yiubd.com/114.114.114.114
 server=/yiupin.com/114.114.114.114
 server=/yiuxiu.com/114.114.114.114
 server=/yivian.com/114.114.114.114
