--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102849,6 +102849,7 @@ server=/zuulee.com/114.114.114.114
 server=/zuwuzhuyi.com/114.114.114.114
 server=/zuxiaoqi.com/114.114.114.114
 server=/zuxiaoyi.com/114.114.114.114
+server=/zuyaxi.com/114.114.114.114
 server=/zuyouzu.com/114.114.114.114
 server=/zuysfr.com/114.114.114.114
 server=/zuyunfei.com/114.114.114.114
