--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -102903,6 +102903,7 @@ server=/zwlw.net/114.114.114.114
 server=/zwmrxd.com/114.114.114.114
 server=/zwoasi.com/114.114.114.114
 server=/zwoptical.com/114.114.114.114
+server=/zwoptics.com/114.114.114.114
 server=/zwslshy.com/114.114.114.114
 server=/zwsmds.com/114.114.114.114
 server=/zwtianshangm.com/114.114.114.114
