accelerated-domains: add hailanggroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39366,6 +39366,7 @@ server=/haikeoutdoor.com/114.114.114.114
 server=/haiketrip.com/114.114.114.114
 server=/haikouvw.com/114.114.114.114
 server=/haikouwater.com/114.114.114.114
+server=/hailanggroup.com/114.114.114.114
 server=/haili-spitzer.com/114.114.114.114
 server=/hailiang.com/114.114.114.114
 server=/hailiangedu.com/114.114.114.114
