--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -27778,6 +27778,7 @@ server=/dttnsq.com/114.114.114.114
 server=/dttt.net/114.114.114.114
 server=/dtuosh.com/114.114.114.114
 server=/dtuyun.com/114.114.114.114
+server=/dtwave.com/114.114.114.114
 server=/dtxbl.com/114.114.114.114
 server=/dtxmw.com/114.114.114.114
 server=/dtxn.net/114.114.114.114
