accelerated-domains: add gaoxitech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33398,6 +33398,7 @@ server=/gaoxin123.com/114.114.114.114
 server=/gaoxincarbon.com/114.114.114.114
 server=/gaoxinedu.net/114.114.114.114
 server=/gaoxinkc.com/114.114.114.114
+server=/gaoxitech.com/114.114.114.114
 server=/gaoyawang.com/114.114.114.114
 server=/gaoyizaixian.com/114.114.114.114
 server=/gaoyoujob.com/114.114.114.114
