--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45145,6 +45145,7 @@ server=/hzshanjie.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
 server=/hzsource.com/114.114.114.114
+server=/hzspeed.com/114.114.114.114
 server=/hzsqhb.com/114.114.114.114
 server=/hzsswjt.com/114.114.114.114
 server=/hzstad.com/114.114.114.114
