--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -61770,6 +61770,7 @@ server=/msjingmi.com/114.114.114.114
 server=/msjy123.com/114.114.114.114
 server=/mskjf.com/114.114.114.114
 server=/mskoo.com/114.114.114.114
+server=/msltbio.com/114.114.114.114
 server=/mslzk.com/114.114.114.114
 server=/msm.moe/114.114.114.114
 server=/msmartlife.com/114.114.114.114
