accelerated-domains: add hzbpm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44966,6 +44966,7 @@ server=/hzbomed.com/114.114.114.114
 server=/hzbook.com/114.114.114.114
 server=/hzboxing.com/114.114.114.114
 server=/hzboxuan.com/114.114.114.114
+server=/hzbpm.com/114.114.114.114
 server=/hzbxm.com/114.114.114.114
 server=/hzc.com/114.114.114.114
 server=/hzcbparking.com/114.114.114.114
