--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45011,6 +45011,7 @@ server=/hzelec.com/114.114.114.114
 server=/hzeyun.com/114.114.114.114
 server=/hzfc.cc/114.114.114.114
 server=/hzfeiyao.com/114.114.114.114
+server=/hzfj.com/114.114.114.114
 server=/hzfolo.com/114.114.114.114
 server=/hzfpay.com/114.114.114.114
 server=/hzfucai.net/114.114.114.114
