--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70886,6 +70886,7 @@ server=/qwvv.com/114.114.114.114
 server=/qwxcs.com/114.114.114.114
 server=/qx-era.com/114.114.114.114
 server=/qx-kj.com/114.114.114.114
+server=/qx-semi.com/114.114.114.114
 server=/qx1000.com/114.114.114.114
 server=/qx10086.net/114.114.114.114
 server=/qx100years.com/114.114.114.114
