--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101006,6 +101006,7 @@ server=/zhongxuewy.net/114.114.114.114
 server=/zhongxunrunda.com/114.114.114.114
 server=/zhongxuntv.com/114.114.114.114
 server=/zhongxuyiyuan.com/114.114.114.114
+server=/zhongyagroup.com/114.114.114.114
 server=/zhongyangkeji.com/114.114.114.114
 server=/zhongyangweixiu.com/114.114.114.114
 server=/zhongyaoyi.com/114.114.114.114
