--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -96039,6 +96039,7 @@ server=/yinhecn.com/114.114.114.114
 server=/yinheyuedu.com/114.114.114.114
 server=/yinhu.com/114.114.114.114
 server=/yinhuadm.one/114.114.114.114
+server=/yinhulaser.com/114.114.114.114
 server=/yini.org/114.114.114.114
 server=/yini8.com/114.114.114.114
 server=/yinjiabio.com/114.114.114.114
