--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21121,6 +21121,7 @@ server=/citygf.com/114.114.114.114
 server=/cityhui.com/114.114.114.114
 server=/cityhuitech.com/114.114.114.114
 server=/citylinker.com/114.114.114.114
+server=/cityos.com/114.114.114.114
 server=/citypaly.com/114.114.114.114
 server=/citys114.com/114.114.114.114
 server=/citysbs.com/114.114.114.114
