accelerated-domains: add hzfeat.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45012,6 +45012,7 @@ server=/hzeg.com/114.114.114.114
 server=/hzelec.com/114.114.114.114
 server=/hzeyun.com/114.114.114.114
 server=/hzfc.cc/114.114.114.114
+server=/hzfeat.com/114.114.114.114
 server=/hzfeiyao.com/114.114.114.114
 server=/hzfj.com/114.114.114.114
 server=/hzfolo.com/114.114.114.114
