--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45100,6 +45100,7 @@ server=/hzmantu.com/114.114.114.114
 server=/hzmba.com/114.114.114.114
 server=/hzmctech.com/114.114.114.114
 server=/hzmdcnc.com/114.114.114.114
+server=/hzmeizhuo.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
 server=/hzmkdq.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
