accelerated-domains: add jianpeicn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49033,6 +49033,7 @@ server=/jianmite.com/114.114.114.114
 server=/jianmuhub.com/114.114.114.114
 server=/jianniang.com/114.114.114.114
 server=/jianpaimeiye.com/114.114.114.114
+server=/jianpeicn.com/114.114.114.114
 server=/jianpian.info/114.114.114.114
 server=/jianpu2.com/114.114.114.114
 server=/jianpu8.com/114.114.114.114
