accelerated-domains: add ftlzghz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -32511,6 +32511,7 @@ server=/fthimalayandb.com/114.114.114.114
 server=/ftium4.com/114.114.114.114
 server=/ftlcloud.com/114.114.114.114
 server=/ftls.xyz/114.114.114.114
+server=/ftlzghz.com/114.114.114.114
 server=/ftmespro.com/114.114.114.114
 server=/ftnwater.com/114.114.114.114
 server=/ftoc.com/114.114.114.114
