--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -17257,6 +17257,7 @@ server=/cageystone.com/114.114.114.114
 server=/cagoe.com/114.114.114.114
 server=/cahkms.org/114.114.114.114
 server=/cahuo.com/114.114.114.114
+server=/cai-ba.com/114.114.114.114
 server=/cai120.com/114.114.114.114
 server=/cai21.xyz/114.114.114.114
 server=/cai58t.com/114.114.114.114
