--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33018,6 +33018,7 @@ server=/fzxyyqd.com/114.114.114.114
 server=/fzyfan.com/114.114.114.114
 server=/fzyfs.net/114.114.114.114
 server=/fzyun.net/114.114.114.114
+server=/fzyvis.com/114.114.114.114
 server=/fzzhaobiao.com/114.114.114.114
 server=/fzzhuoyi.com/114.114.114.114
 server=/fzzixun.com/114.114.114.114
