accelerated-domains: add gaisen.ltd

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -33112,6 +33112,7 @@ server=/gaini.net/114.114.114.114
 server=/gainifyads.com/114.114.114.114
 server=/gainscha.com/114.114.114.114
 server=/gairuo.com/114.114.114.114
+server=/gaisen.ltd/114.114.114.114
 server=/gaitu.com/114.114.114.114
 server=/gaituba.com/114.114.114.114
 server=/gaitubao.com/114.114.114.114
