accelerated-domains: add hangwei-media.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39635,6 +39635,7 @@ server=/hangtunggroup.com/114.114.114.114
 server=/hanguangbaihuo.com/114.114.114.114
 server=/hanguu.com/114.114.114.114
 server=/hangw.com/114.114.114.114
+server=/hangwei-media.com/114.114.114.114
 server=/hangxinyiqi.xin/114.114.114.114
 server=/hangxun100.com/114.114.114.114
 server=/hangyan.co/114.114.114.114
