--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45031,6 +45031,7 @@ server=/hzgmwl.com/114.114.114.114
 server=/hzgolong.com/114.114.114.114
 server=/hzgqsb.com/114.114.114.114
 server=/hzgrow.com/114.114.114.114
+server=/hzgthb.com/114.114.114.114
 server=/hzguojiao.com/114.114.114.114
 server=/hzgwzn.com/114.114.114.114
 server=/hzgxr.com/114.114.114.114
