--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45151,6 +45151,7 @@ server=/hzsaifang.com/114.114.114.114
 server=/hzsanjiaomao.com/114.114.114.114
 server=/hzsaso.com/114.114.114.114
 server=/hzsbz.com/114.114.114.114
+server=/hzsdjzgs.com/114.114.114.114
 server=/hzsdlrmyy.com/114.114.114.114
 server=/hzsdyfzfxxx.com/114.114.114.114
 server=/hzsgjj.com/114.114.114.114
