--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45186,6 +45186,7 @@ server=/hztzkj.net/114.114.114.114
 server=/hzvillas.com/114.114.114.114
 server=/hzwatch.com/114.114.114.114
 server=/hzwaye.com/114.114.114.114
+server=/hzwentou.com/114.114.114.114
 server=/hzwer.com/114.114.114.114
 server=/hzwf.link/114.114.114.114
 server=/hzwgc.com/114.114.114.114
