accelerated-domains: add pejgzc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67000,6 +67000,7 @@ server=/peiyishan.com/114.114.114.114
 server=/peiyou.com/114.114.114.114
 server=/peiyouwang.com/114.114.114.114
 server=/peizi.com/114.114.114.114
+server=/pejgzc.com/114.114.114.114
 server=/pejxjy.com/114.114.114.114
 server=/pek0b0.com/114.114.114.114
 server=/peksung.com/114.114.114.114
