accelerated-domains: add sky-ing.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -77084,6 +77084,7 @@ server=/skxox.com/114.114.114.114
 server=/skxsj.com/114.114.114.114
 server=/sky-deep.com/114.114.114.114
 server=/sky-fire.com/114.114.114.114
+server=/sky-ing.com/114.114.114.114
 server=/sky-mobi.com/114.114.114.114
 server=/sky123th.com/114.114.114.114
 server=/sky1shop.com/114.114.114.114
