accelerated-domains: add aioptics.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10169,6 +10169,7 @@ server=/ainyi.com/114.114.114.114
 server=/aioclinic.com/114.114.114.114
 server=/aioexpress.com/114.114.114.114
 server=/aiops.com/114.114.114.114
+server=/aioptics.com/114.114.114.114
 server=/aiotoolbox.com/114.114.114.114
 server=/aipage.com/114.114.114.114
 server=/aipai.com/114.114.114.114
