accelerated-domains: add crechan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23456,6 +23456,7 @@ server=/crec4.com/114.114.114.114
 server=/crec4mc.com/114.114.114.114
 server=/crecg-jt.com/114.114.114.114
 server=/crecg.com/114.114.114.114
+server=/crechan.com/114.114.114.114
 server=/crecohe.com/114.114.114.114
 server=/crectgroup.com/114.114.114.114
 server=/crecu.com/114.114.114.114
