accelerated-domains: add gmaxbiopharm.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -34858,6 +34858,7 @@ server=/gmacsaic.com/114.114.114.114
 server=/gmallbio.com/114.114.114.114
 server=/gmanhua.com/114.114.114.114
 server=/gmatg.com/114.114.114.114
+server=/gmaxbiopharm.com/114.114.114.114
 server=/gmcc.net/114.114.114.114
 server=/gmcchina.net/114.114.114.114
 server=/gmcinnov.com/114.114.114.114
