accelerated-domains: add wisekingsurgical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -88612,6 +88612,7 @@ server=/wisedu.com/114.114.114.114
 server=/wiseetec.com/114.114.114.114
 server=/wisegotech.com/114.114.114.114
 server=/wiseimp.com/114.114.114.114
+server=/wisekingsurgical.com/114.114.114.114
 server=/wiselong.cc/114.114.114.114
 server=/wiselong.com/114.114.114.114
 server=/wisenjoy.com/114.114.114.114
