accelerated-domains: add xinchenai.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91887,6 +91887,7 @@ server=/xinchangol.com/114.114.114.114
 server=/xinchao.com/114.114.114.114
 server=/xinchaoss.com/114.114.114.114
 server=/xinchego.com/114.114.114.114
+server=/xinchenai.com/114.114.114.114
 server=/xincheng.com/114.114.114.114
 server=/xinchengge13.com/114.114.114.114
 server=/xinchengyue.com/114.114.114.114
