accelerated-domains: add hqyt.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43105,6 +43105,7 @@ server=/hqyjng.com/114.114.114.114
 server=/hqyjsuccess.com/114.114.114.114
 server=/hqyl.com/114.114.114.114
 server=/hqys.net/114.114.114.114
+server=/hqyt.net/114.114.114.114
 server=/hqytgyh.com/114.114.114.114
 server=/hqyun.com/114.114.114.114
 server=/hqyxjy.com/114.114.114.114
