accelerated-domains: add iithz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -46333,6 +46333,7 @@ server=/iissbbs.com/114.114.114.114
 server=/iissnan.com/114.114.114.114
 server=/iitang.com/114.114.114.114
 server=/iitcp.com/114.114.114.114
+server=/iithz.com/114.114.114.114
 server=/iitol.com/114.114.114.114
 server=/iituku.com/114.114.114.114
 server=/iivd.net/114.114.114.114
