--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20137,6 +20137,7 @@ server=/chinalonghu.com/114.114.114.114
 server=/chinalowcarb.com/114.114.114.114
 server=/chinalsjt.com/114.114.114.114
 server=/chinalubricant.com/114.114.114.114
+server=/chinalulutong.com/114.114.114.114
 server=/chinalure.com/114.114.114.114
 server=/chinalushan.com/114.114.114.114
 server=/chinaluxury.net/114.114.114.114
