--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -28113,6 +28113,7 @@ server=/dvr163.com/114.114.114.114
 server=/dvrdydns.com/114.114.114.114
 server=/dvsadive.com/114.114.114.114
 server=/dvvvs.com/114.114.114.114
+server=/dw-microbiology.com/114.114.114.114
 server=/dw4.co/114.114.114.114
 server=/dwdds.com/114.114.114.114
 server=/dwgbj.com/114.114.114.114
