accelerated-domains: add feisiplus.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31196,6 +31196,7 @@ server=/feishuopenplatformrecord.com/114.114.114.114
 server=/feishupkg.com/114.114.114.114
 server=/feishuvc.com/114.114.114.114
 server=/feishuwx.net/114.114.114.114
+server=/feisiplus.com/114.114.114.114
 server=/feistech.com/114.114.114.114
 server=/feisu.com/114.114.114.114
 server=/feisuwx.org/114.114.114.114
