--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -43893,6 +43893,7 @@ server=/huaxing.com/114.114.114.114
 server=/huaxingas.com/114.114.114.114
 server=/huaxingchem.com/114.114.114.114
 server=/huaxingku.com/114.114.114.114
+server=/huaxinhz.com/114.114.114.114
 server=/huaxinorthop.com/114.114.114.114
 server=/huaxinpark.com/114.114.114.114
 server=/huaxintec.com/114.114.114.114
