--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45037,6 +45037,7 @@ server=/hzgh.org/114.114.114.114
 server=/hzgjj.com/114.114.114.114
 server=/hzgmwl.com/114.114.114.114
 server=/hzgolong.com/114.114.114.114
+server=/hzgoyuan.com/114.114.114.114
 server=/hzgqsb.com/114.114.114.114
 server=/hzgrow.com/114.114.114.114
 server=/hzgthb.com/114.114.114.114
