--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45077,6 +45077,7 @@ server=/hzjcbg.com/114.114.114.114
 server=/hzjcp.com/114.114.114.114
 server=/hzjcqczl.com/114.114.114.114
 server=/hzjiantong.com/114.114.114.114
+server=/hzjiaro.com/114.114.114.114
 server=/hzjie7.com/114.114.114.114
 server=/hzjingxian.com/114.114.114.114
 server=/hzjiuyimo.com/114.114.114.114
