--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -91647,6 +91647,7 @@ server=/xiaozhen.com/114.114.114.114
 server=/xiaozhenpaotui.com/114.114.114.114
 server=/xiaozhibaoxian.com/114.114.114.114
 server=/xiaozhibo.com/114.114.114.114
+server=/xiaozhimed.com/114.114.114.114
 server=/xiaozhiyun.com/114.114.114.114
 server=/xiaozhizhijia.com/114.114.114.114
 server=/xiaozhongjishu.com/114.114.114.114
