accelerated-domains: add aimingmed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10147,6 +10147,7 @@ server=/aimeter.com/114.114.114.114
 server=/aimicron.com/114.114.114.114
 server=/aimilebc.com/114.114.114.114
 server=/aimin1979.com/114.114.114.114
+server=/aimingmed.com/114.114.114.114
 server=/aimingtai.com/114.114.114.114
 server=/aimipay.net/114.114.114.114
 server=/aimiplay.com/114.114.114.114
