accelerated-domains: add hangyang.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39646,6 +39646,7 @@ server=/hangwei-media.com/114.114.114.114
 server=/hangxinyiqi.xin/114.114.114.114
 server=/hangxun100.com/114.114.114.114
 server=/hangyan.co/114.114.114.114
+server=/hangyang.com/114.114.114.114
 server=/hangye365.com/114.114.114.114
 server=/hangyecloud.com/114.114.114.114
 server=/hangzhiqiao.com/114.114.114.114
