accelerated-domains: add hzdmpower.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45016,6 +45016,7 @@ server=/hzdjr.com/114.114.114.114
 server=/hzdjy.com/114.114.114.114
 server=/hzdledu.com/114.114.114.114
 server=/hzdlrj.com/114.114.114.114
+server=/hzdmpower.com/114.114.114.114
 server=/hzdq.com/114.114.114.114
 server=/hzdsrmyy.com/114.114.114.114
 server=/hzdtv.tv/114.114.114.114
