--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45098,6 +45098,7 @@ server=/hzjuzhi.com/114.114.114.114
 server=/hzjxapp.com/114.114.114.114
 server=/hzjxmd.com/114.114.114.114
 server=/hzjywl.net/114.114.114.114
+server=/hzjzjc.com/114.114.114.114
 server=/hzjzmed.com/114.114.114.114
 server=/hzkaiming.com/114.114.114.114
 server=/hzkayo.com/114.114.114.114
