--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45126,6 +45126,7 @@ server=/hzmeizhuo.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
 server=/hzmkdq.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
+server=/hzmtg.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
 server=/hzmylike.com/114.114.114.114
 server=/hzncc.com/114.114.114.114
