accelerated-domains: add qianxungroup.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69214,6 +69214,7 @@ server=/qianxs.com/114.114.114.114
 server=/qianxuew.com/114.114.114.114
 server=/qianxun.com/114.114.114.114
 server=/qianxunclub.com/114.114.114.114
+server=/qianxungroup.com/114.114.114.114
 server=/qianxuntrip.com/114.114.114.114
 server=/qianyan.biz/114.114.114.114
 server=/qianyan001.com/114.114.114.114
