--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -82804,6 +82804,7 @@ server=/topsmt.com/114.114.114.114
 server=/topsresearch.com/114.114.114.114
 server=/topsrx.com/114.114.114.114
 server=/topstar.art/114.114.114.114
+server=/topsunholdings.com/114.114.114.114
 server=/topswim.net/114.114.114.114
 server=/toptastewin.com/114.114.114.114
 server=/topthink.com/114.114.114.114
