accelerated-domains: add viablife.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85558,6 +85558,7 @@ server=/vi-mayman.com/114.114.114.114
 server=/vi21.net/114.114.114.114
 server=/vi586.com/114.114.114.114
 server=/via-cert.com/114.114.114.114
+server=/viablife.com/114.114.114.114
 server=/viaeda.com/114.114.114.114
 server=/vial.cc/114.114.114.114
 server=/viarmour.com/114.114.114.114
