accelerated-domains: add youngsunpack.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -97267,6 +97267,7 @@ server=/youngjoygame.com/114.114.114.114
 server=/youngle.site/114.114.114.114
 server=/youngle.tech/114.114.114.114
 server=/youngor.com/114.114.114.114
+server=/youngsunpack.com/114.114.114.114
 server=/youni.im/114.114.114.114
 server=/younuokeji.cloud/114.114.114.114
 server=/youo.net/114.114.114.114
