accelerated-domains: add feipr.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -31174,6 +31174,7 @@ server=/feinno.com/114.114.114.114
 server=/feiphp.com/114.114.114.114
 server=/feipin.com/114.114.114.114
 server=/feipinzhan.com/114.114.114.114
+server=/feipr.com/114.114.114.114
 server=/feiq18.com/114.114.114.114
 server=/feirar.com/114.114.114.114
 server=/feiruikeji.com/114.114.114.114
