--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45180,6 +45180,7 @@ server=/hzslgzx.com/114.114.114.114
 server=/hzsource.com/114.114.114.114
 server=/hzspeed.com/114.114.114.114
 server=/hzsqhb.com/114.114.114.114
+server=/hzsqsmart.com/114.114.114.114
 server=/hzsswjt.com/114.114.114.114
 server=/hzstad.com/114.114.114.114
 server=/hzstad88.com/114.114.114.114
