accelerated-domains: add hztdjt.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45193,6 +45193,7 @@ server=/hzszls.com/114.114.114.114
 server=/hzszyyy.com/114.114.114.114
 server=/hzt2006.com/114.114.114.114
 server=/hztchj.com/114.114.114.114
+server=/hztdjt.com/114.114.114.114
 server=/hzteaexpo.com/114.114.114.114
 server=/hztek.com/114.114.114.114
 server=/hzthinker.net/114.114.114.114
