--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24762,6 +24762,7 @@ server=/dalipan.com/114.114.114.114
 server=/daliuren.vip/114.114.114.114
 server=/dalongkeji.com/114.114.114.114
 server=/dalongyun.com/114.114.114.114
+server=/daltonbio.com/114.114.114.114
 server=/dalu.net/114.114.114.114
 server=/daluma.com/114.114.114.114
 server=/daluo.com/114.114.114.114
