--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -26070,6 +26070,7 @@ server=/dian500.com/114.114.114.114
 server=/dian68.net/114.114.114.114
 server=/dianadating.com/114.114.114.114
 server=/dianapp.com/114.114.114.114
+server=/dianbio.com/114.114.114.114
 server=/dianbo.org/114.114.114.114
 server=/dianbobao.com/114.114.114.114
 server=/dianbucuo.com/114.114.114.114
