accelerated-domains: add grcwzx.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35483,6 +35483,7 @@ server=/gravity-engine.com/114.114.114.114
 server=/gray-ice.com/114.114.114.114
 server=/grcbank.com/114.114.114.114
 server=/grchina.com/114.114.114.114
+server=/grcwzx.com/114.114.114.114
 server=/great-future.com/114.114.114.114
 server=/greatbit.com/114.114.114.114
 server=/greatesting.com/114.114.114.114
