--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -41646,6 +41646,7 @@ server=/hiditie.com/114.114.114.114
 server=/hidna.net/114.114.114.114
 server=/hidreamai.com/114.114.114.114
 server=/hidva.com/114.114.114.114
+server=/hiechangzhou.com/114.114.114.114
 server=/hiecheimaetu.com/114.114.114.114
 server=/hiencode.com/114.114.114.114
 server=/hienshi.com/114.114.114.114
