accelerated-domains: add hzmobius.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45131,6 +45131,7 @@ server=/hzmdcnc.com/114.114.114.114
 server=/hzmeizhuo.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
 server=/hzmkdq.com/114.114.114.114
+server=/hzmobius.com/114.114.114.114
 server=/hzmogo.com/114.114.114.114
 server=/hzmtg.com/114.114.114.114
 server=/hzmxkj.net/114.114.114.114
