--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45164,6 +45164,7 @@ server=/hzrc.com/114.114.114.114
 server=/hzrdjt.com/114.114.114.114
 server=/hzredream.com/114.114.114.114
 server=/hzrib.com/114.114.114.114
+server=/hzriyue.com/114.114.114.114
 server=/hzrjkf.com/114.114.114.114
 server=/hzrobam.com/114.114.114.114
 server=/hzrqgf.com/114.114.114.114
