--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99708,6 +99708,7 @@ server=/zfj1441.com/114.114.114.114
 server=/zfkjgw.com/114.114.114.114
 server=/zfl9.com/114.114.114.114
 server=/zfloan.com/114.114.114.114
+server=/zfnet.net/114.114.114.114
 server=/zfowed.com/114.114.114.114
 server=/zfrontier.com/114.114.114.114
 server=/zfsc.com/114.114.114.114
