--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -100982,6 +100982,7 @@ server=/zhongliangxny.com/114.114.114.114
 server=/zhonglianhuashu.com/114.114.114.114
 server=/zhongliusp.com/114.114.114.114
 server=/zhongliuyiyuan.com/114.114.114.114
+server=/zhonglue-consulting.com/114.114.114.114
 server=/zhonglun.com/114.114.114.114
 server=/zhonglunnet.com/114.114.114.114
 server=/zhongmaohr.com/114.114.114.114
