--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101819,6 +101819,7 @@ server=/zjhx520.com/114.114.114.114
 server=/zjhyrcb.com/114.114.114.114
 server=/zjhzgy.com/114.114.114.114
 server=/zjhzkq.com/114.114.114.114
+server=/zjhzwjl.com/114.114.114.114
 server=/zjhzxc.com/114.114.114.114
 server=/zji.net/114.114.114.114
 server=/zjia8.com/114.114.114.114
