--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45127,6 +45127,7 @@ server=/hzmansheng.com/114.114.114.114
 server=/hzmantu.com/114.114.114.114
 server=/hzmba.com/114.114.114.114
 server=/hzmctech.com/114.114.114.114
+server=/hzmdch.com/114.114.114.114
 server=/hzmdcnc.com/114.114.114.114
 server=/hzmeizhuo.com/114.114.114.114
 server=/hzmetro.com/114.114.114.114
