--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -84917,6 +84917,7 @@ server=/urovo.com/114.114.114.114
 server=/urovo.net/114.114.114.114
 server=/urovoworld.com/114.114.114.114
 server=/urq7wvyumzfdi5.com/114.114.114.114
+server=/urs-china.com/114.114.114.114
 server=/ursb.me/114.114.114.114
 server=/urselect.com/114.114.114.114
 server=/urtrust.com/114.114.114.114
