--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -10977,6 +10977,7 @@ server=/amarsoft.com/114.114.114.114
 server=/amassfreight.com/114.114.114.114
 server=/amateurinterracialporn.net/114.114.114.114
 server=/amaxchina.com/114.114.114.114
+server=/amayad.com/114.114.114.114
 server=/amazeui.org/114.114.114.114
 server=/amazfit.com/114.114.114.114
 server=/amazingsys.com/114.114.114.114
