accelerated-domains: add chunjiangvalve.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20853,6 +20853,7 @@ server=/chungkwong.cc/114.114.114.114
 server=/chunhaijx.com/114.114.114.114
 server=/chunhingplasticbags.com/114.114.114.114
 server=/chunhuinongye.com/114.114.114.114
+server=/chunjiangvalve.com/114.114.114.114
 server=/chunjingban.net/114.114.114.114
 server=/chunliangpai.com/114.114.114.114
 server=/chunliao.net/114.114.114.114
