accelerated-domains: add hzaoz.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44974,6 +44974,7 @@ server=/hzairport.com/114.114.114.114
 server=/hzajjt.com/114.114.114.114
 server=/hzallina.com/114.114.114.114
 server=/hzamcare.com/114.114.114.114
+server=/hzaoz.com/114.114.114.114
 server=/hzapuqi.com/114.114.114.114
 server=/hzarx.com/114.114.114.114
 server=/hzazh.com/114.114.114.114
