--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45229,6 +45229,7 @@ server=/hzwsjyjt.com/114.114.114.114
 server=/hzwtech.com/114.114.114.114
 server=/hzwwbj.com/114.114.114.114
 server=/hzwyx.net/114.114.114.114
+server=/hzxbcs.com/114.114.114.114
 server=/hzxddt.com/114.114.114.114
 server=/hzxdship.com/114.114.114.114
 server=/hzxhgy.com/114.114.114.114
