--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49647,6 +49647,7 @@ server=/jingkunagro.com/114.114.114.114
 server=/jinglawyer.com/114.114.114.114
 server=/jinglian88.com/114.114.114.114
 server=/jingliangad.com/114.114.114.114
+server=/jingling.group/114.114.114.114
 server=/jinglingbaoai.com/114.114.114.114
 server=/jinglingbiaozhu.com/114.114.114.114
 server=/jinglou8.com/114.114.114.114
