accelerated-domains: add pat-edu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -66764,6 +66764,7 @@ server=/passer-by.com/114.114.114.114
 server=/passion120.com/114.114.114.114
 server=/passport.lenovo.com/114.114.114.114
 server=/passwordkeyboard.com/114.114.114.114
+server=/pat-edu.com/114.114.114.114
 server=/pat-edu.org/114.114.114.114
 server=/patachina.org/114.114.114.114
 server=/patchallin.com/114.114.114.114
