--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -69383,6 +69383,7 @@ server=/qigousoft.com/114.114.114.114
 server=/qiguagua.com/114.114.114.114
 server=/qiguo.com/114.114.114.114
 server=/qiguoread.com/114.114.114.114
+server=/qihanbio.com/114.114.114.114
 server=/qihang.cab/114.114.114.114
 server=/qihangw.com/114.114.114.114
 server=/qihaoip.com/114.114.114.114
