--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73033,6 +73033,7 @@ server=/sanhe-scale.com/114.114.114.114
 server=/sanhetimburly.com/114.114.114.114
 server=/sanheyongjia.com/114.114.114.114
 server=/sanhome.com/114.114.114.114
+server=/sanhuagroup.com/114.114.114.114
 server=/sanhuan.com/114.114.114.114
 server=/sanhucidiao.cc/114.114.114.114
 server=/saninbazar.com/114.114.114.114
