--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101779,6 +101779,7 @@ server=/zjdnajy.com/114.114.114.114
 server=/zjdybank.com/114.114.114.114
 server=/zjdydlc.com/114.114.114.114
 server=/zjdyjob.com/114.114.114.114
+server=/zjdzqt.com/114.114.114.114
 server=/zje.com/114.114.114.114
 server=/zjedps.com/114.114.114.114
 server=/zjedu.org/114.114.114.114
