accelerated-domains: add hangzhoufujikura.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39659,6 +39659,7 @@ server=/hangyecloud.com/114.114.114.114
 server=/hangzhiqiao.com/114.114.114.114
 server=/hangzhouboiler.com/114.114.114.114
 server=/hangzhoufcw.com/114.114.114.114
+server=/hangzhoufujikura.com/114.114.114.114
 server=/hangzhouluohu.com/114.114.114.114
 server=/hangzhoumengfa.com/114.114.114.114
 server=/hangzhouqisheng.com/114.114.114.114
