--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -16354,6 +16354,7 @@ server=/brother-bsh.com/114.114.114.114
 server=/brother-cn.net/114.114.114.114
 server=/brother-movie.com/114.114.114.114
 server=/brother.co.jp/114.114.114.114
+server=/brotherchem.com/114.114.114.114
 server=/browurl.com/114.114.114.114
 server=/brpcb.com/114.114.114.114
 server=/brrub.us/114.114.114.114
