accelerated-domains: add envi-ch.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -29643,6 +29643,7 @@ server=/enterdesk.net/114.114.114.114
 server=/entertainment5vn.com/114.114.114.114
 server=/enunix.com/114.114.114.114
 server=/enuomachinery.net/114.114.114.114
+server=/envi-ch.com/114.114.114.114
 server=/envisioncn.com/114.114.114.114
 server=/enwto.com/114.114.114.114
 server=/enxicled.com/114.114.114.114
