--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42154,6 +42154,7 @@ server=/hlzaojia.com/114.114.114.114
 server=/hlzq.com/114.114.114.114
 server=/hlzqgs.com/114.114.114.114
 server=/hm-3223.net/114.114.114.114
+server=/hm-optics.com/114.114.114.114
 server=/hm025.com/114.114.114.114
 server=/hm120.com/114.114.114.114
 server=/hm152n.com/114.114.114.114
