accelerated-domains: add hzdely.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45026,6 +45026,7 @@ server=/hzctxh.com/114.114.114.114
 server=/hzcybb.xyz/114.114.114.114
 server=/hzdajiangdong.com/114.114.114.114
 server=/hzddwk.com/114.114.114.114
+server=/hzdely.com/114.114.114.114
 server=/hzdgjc.com/114.114.114.114
 server=/hzdjr.com/114.114.114.114
 server=/hzdjy.com/114.114.114.114
