accelerated-domains: add hzscxsj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45187,6 +45187,7 @@ server=/hzsaifang.com/114.114.114.114
 server=/hzsanjiaomao.com/114.114.114.114
 server=/hzsaso.com/114.114.114.114
 server=/hzsbz.com/114.114.114.114
+server=/hzscxsj.com/114.114.114.114
 server=/hzsdjzgs.com/114.114.114.114
 server=/hzsdlrmyy.com/114.114.114.114
 server=/hzsdyfzfxxx.com/114.114.114.114
