--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45196,6 +45196,7 @@ server=/hzsh666.com/114.114.114.114
 server=/hzshanjie.com/114.114.114.114
 server=/hzshudian.com/114.114.114.114
 server=/hzslgzx.com/114.114.114.114
+server=/hzsnowcom.com/114.114.114.114
 server=/hzsource.com/114.114.114.114
 server=/hzspeed.com/114.114.114.114
 server=/hzsqhb.com/114.114.114.114
