accelerated-domains: add jhspa6.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48817,6 +48817,7 @@ server=/jhscm.com/114.114.114.114
 server=/jhscrm.com/114.114.114.114
 server=/jhsddjd.com/114.114.114.114
 server=/jhsjttz.com/114.114.114.114
+server=/jhspa6.com/114.114.114.114
 server=/jhssapp.com/114.114.114.114
 server=/jhszyy.com/114.114.114.114
 server=/jhtcgroup.com/114.114.114.114
