--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -58126,6 +58126,7 @@ server=/lvdhb.com/114.114.114.114
 server=/lvdongip.com/114.114.114.114
 server=/lvdoutang.com/114.114.114.114
 server=/lvdxs.com/114.114.114.114
+server=/lve-china.com/114.114.114.114
 server=/lvfang.cc/114.114.114.114
 server=/lvfangwang.net/114.114.114.114
 server=/lvfapiao.com/114.114.114.114
