--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -62822,6 +62822,7 @@ server=/naozhong.net/114.114.114.114
 server=/napengzn.com/114.114.114.114
 server=/napiantian.com/114.114.114.114
 server=/napthetocchien.com/114.114.114.114
+server=/naqing-tech.com/114.114.114.114
 server=/naquan.com/114.114.114.114
 server=/naquan.org/114.114.114.114
 server=/naradafoundation.org/114.114.114.114
