accelerated-domains: add yunzehj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98617,6 +98617,7 @@ server=/yunyunkan.com/114.114.114.114
 server=/yunyunvip.com/114.114.114.114
 server=/yunyuwuyou.com/114.114.114.114
 server=/yunzazhi.com/114.114.114.114
+server=/yunzehj.com/114.114.114.114
 server=/yunzhan365.com/114.114.114.114
 server=/yunzhangfang.com/114.114.114.114
 server=/yunzhanggui.net/114.114.114.114
