accelerated-domains: add jftech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -48710,6 +48710,7 @@ server=/jfsc.com/114.114.114.114
 server=/jfshare.com/114.114.114.114
 server=/jfsmgs.com/114.114.114.114
 server=/jfstatic.com/114.114.114.114
+server=/jftech.com/114.114.114.114
 server=/jftianshancn.com/114.114.114.114
 server=/jfwb.com/114.114.114.114
 server=/jfwypay.com/114.114.114.114
