--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -21783,6 +21783,7 @@ server=/cn-em.com/114.114.114.114
 server=/cn-food.net/114.114.114.114
 server=/cn-healthcare.com/114.114.114.114
 server=/cn-healthclass.com/114.114.114.114
+server=/cn-huaguang.com/114.114.114.114
 server=/cn-huar.com/114.114.114.114
 server=/cn-immunotech.com/114.114.114.114
 server=/cn-lcd.com/114.114.114.114
