accelerated-domains: add ideacreated.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45897,6 +45897,7 @@ server=/iddddg.com/114.114.114.114
 server=/ideabody.com/114.114.114.114
 server=/ideacarbon.org/114.114.114.114
 server=/ideacms.net/114.114.114.114
+server=/ideacreated.com/114.114.114.114
 server=/ideaflow.pro/114.114.114.114
 server=/ideagou.com/114.114.114.114
 server=/idealbags.com/114.114.114.114
