accelerated-domains: add choututech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -20672,6 +20672,7 @@ server=/choupangxia.com/114.114.114.114
 server=/chouqu.com/114.114.114.114
 server=/chouti.cc/114.114.114.114
 server=/chouti.com/114.114.114.114
+server=/choututech.com/114.114.114.114
 server=/choyri.com/114.114.114.114
 server=/chplayer.com/114.114.114.114
 server=/chq360.com/114.114.114.114
