--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -23479,6 +23479,7 @@ server=/credithc.com/114.114.114.114
 server=/creditrepairjournal.com/114.114.114.114
 server=/creditsailing.com/114.114.114.114
 server=/creditzuji.com/114.114.114.114
+server=/creflux.net/114.114.114.114
 server=/creo-support.com/114.114.114.114
 server=/crepcrep.com/114.114.114.114
 server=/creplus.net/114.114.114.114
