--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44666,6 +44666,7 @@ server=/hwxuanliuqi.com/114.114.114.114
 server=/hwyxxx.com/114.114.114.114
 server=/hwzyjt.com/114.114.114.114
 server=/hx-gifts.com/114.114.114.114
+server=/hx-qt.com/114.114.114.114
 server=/hx-r.com/114.114.114.114
 server=/hx008.net/114.114.114.114
 server=/hx110.com/114.114.114.114
