accelerated-domains: add hzmcd.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45141,6 +45141,7 @@ server=/hzman.net/114.114.114.114
 server=/hzmansheng.com/114.114.114.114
 server=/hzmantu.com/114.114.114.114
 server=/hzmba.com/114.114.114.114
+server=/hzmcd.com/114.114.114.114
 server=/hzmctech.com/114.114.114.114
 server=/hzmdch.com/114.114.114.114
 server=/hzmdcnc.com/114.114.114.114
