accelerated-domains: add wuzhoumed.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -89876,6 +89876,7 @@ server=/wuzhiwei.net/114.114.114.114
 server=/wuzhoucj.com/114.114.114.114
 server=/wuzhoucloud.com/114.114.114.114
 server=/wuzhoudonghui.com/114.114.114.114
+server=/wuzhoumed.com/114.114.114.114
 server=/wuzhouqianzheng.com/114.114.114.114
 server=/wuzhourcw.com/114.114.114.114
 server=/wuzhouwahson.com/114.114.114.114
