--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44966,6 +44966,7 @@ server=/hz-medicine.com/114.114.114.114
 server=/hz-moon.com/114.114.114.114
 server=/hz-shoes.com/114.114.114.114
 server=/hz-sllace.com/114.114.114.114
+server=/hz-spring.net/114.114.114.114
 server=/hz-tire.com/114.114.114.114
 server=/hz-winone.com/114.114.114.114
 server=/hz-xin.com/114.114.114.114
