--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45091,6 +45091,7 @@ server=/hzhqqz.com/114.114.114.114
 server=/hzhr.com/114.114.114.114
 server=/hzhssy.com/114.114.114.114
 server=/hzhstb.com/114.114.114.114
+server=/hzhtlh.com/114.114.114.114
 server=/hzhuang.wang/114.114.114.114
 server=/hzhx.com/114.114.114.114
 server=/hzhyqp.com/114.114.114.114
