accelerated-domains: add hzimc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45095,6 +45095,7 @@ server=/hzhtlh.com/114.114.114.114
 server=/hzhuang.wang/114.114.114.114
 server=/hzhx.com/114.114.114.114
 server=/hzhyqp.com/114.114.114.114
+server=/hzimc.com/114.114.114.114
 server=/hzins.com/114.114.114.114
 server=/hzins.net/114.114.114.114
 server=/hzj7.com/114.114.114.114
