--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45228,6 +45228,7 @@ server=/hzteaexpo.com/114.114.114.114
 server=/hztek.com/114.114.114.114
 server=/hzthinker.net/114.114.114.114
 server=/hztiger.com/114.114.114.114
+server=/hztssy.com/114.114.114.114
 server=/hztuoliang.com/114.114.114.114
 server=/hztvmg.com/114.114.114.114
 server=/hztx2020.com/114.114.114.114
