accelerated-domains: add hzswmotor.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45217,6 +45217,7 @@ server=/hzstar.com/114.114.114.114
 server=/hzstarshuaier.com/114.114.114.114
 server=/hzstlzxyy.com/114.114.114.114
 server=/hzsunup.com/114.114.114.114
+server=/hzswmotor.com/114.114.114.114
 server=/hzswysyy.com/114.114.114.114
 server=/hzszls.com/114.114.114.114
 server=/hzszyyy.com/114.114.114.114
