--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45231,6 +45231,7 @@ server=/hztiger.com/114.114.114.114
 server=/hztssy.com/114.114.114.114
 server=/hztuoliang.com/114.114.114.114
 server=/hztvmg.com/114.114.114.114
+server=/hztx.com/114.114.114.114
 server=/hztx2020.com/114.114.114.114
 server=/hztygd.com/114.114.114.114
 server=/hztzkj.net/114.114.114.114
