accelerated-domains: add maxio-tech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -59455,6 +59455,7 @@ server=/maxiaoxin.net/114.114.114.114
 server=/maximajt.com/114.114.114.114
 server=/maximfiber.com/114.114.114.114
 server=/maxing128.com/114.114.114.114
+server=/maxio-tech.com/114.114.114.114
 server=/maxitas.com/114.114.114.114
 server=/maxjia.com/114.114.114.114
 server=/maxket.com/114.114.114.114
