--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -67110,6 +67110,7 @@ server=/pensuchang.com/114.114.114.114
 server=/pensunny.com/114.114.114.114
 server=/pentalaser.com/114.114.114.114
 server=/pentaq.com/114.114.114.114
+server=/pentatomic.com/114.114.114.114
 server=/penxiangge.com/114.114.114.114
 server=/penyouw.com/114.114.114.114
 server=/penzealcn.com/114.114.114.114
