--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -83074,6 +83074,7 @@ server=/tqedu.net/114.114.114.114
 server=/tqeferty33.fun/114.114.114.114
 server=/tqhj88.com/114.114.114.114
 server=/tqiantu.com/114.114.114.114
+server=/tqip.com/114.114.114.114
 server=/tql.ink/114.114.114.114
 server=/tqle.com/114.114.114.114
 server=/tqmall.com/114.114.114.114
