--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -86436,6 +86436,7 @@ server=/wafcn.com/114.114.114.114
 server=/wafsudun.com/114.114.114.114
 server=/wafunny.com/114.114.114.114
 server=/wafzi.com/114.114.114.114
+server=/wagen.cc/114.114.114.114
 server=/waha.cc/114.114.114.114
 server=/waheaven.com/114.114.114.114
 server=/wahlap.com/114.114.114.114
