--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92131,6 +92131,7 @@ server=/xingyizhai.com/114.114.114.114
 server=/xingyongli.com/114.114.114.114
 server=/xingyou99.com/114.114.114.114
 server=/xingyoucai.com/114.114.114.114
+server=/xingyuan-hb.com/114.114.114.114
 server=/xingyuehuyu.com/114.114.114.114
 server=/xingyuhuwai.com/114.114.114.114
 server=/xingyunb.com/114.114.114.114
