--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -101819,6 +101819,7 @@ server=/zjdzqt.com/114.114.114.114
 server=/zje.com/114.114.114.114
 server=/zjedps.com/114.114.114.114
 server=/zjedu.org/114.114.114.114
+server=/zjevt.com/114.114.114.114
 server=/zjfcdn.com/114.114.114.114
 server=/zjfdc.net/114.114.114.114
 server=/zjfszhsw.com/114.114.114.114
