--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -24645,6 +24645,7 @@ server=/dahuodong.com/114.114.114.114
 server=/dai-xi.com/114.114.114.114
 server=/dai361.com/114.114.114.114
 server=/daiaotech.com/114.114.114.114
+server=/daiban0571.com/114.114.114.114
 server=/daibanke.com/114.114.114.114
 server=/daibi.com/114.114.114.114
 server=/daibor.com/114.114.114.114
