--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44982,6 +44982,7 @@ server=/hz7hospital.com/114.114.114.114
 server=/hz8z.net/114.114.114.114
 server=/hz9hospital.com/114.114.114.114
 server=/hzaee.com/114.114.114.114
+server=/hzahy.com/114.114.114.114
 server=/hzaiguojiang.com/114.114.114.114
 server=/hzairport.com/114.114.114.114
 server=/hzajjt.com/114.114.114.114
