accelerated-domains: add miulab.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -60970,6 +60970,7 @@ server=/mitvos.net/114.114.114.114
 server=/miued.com/114.114.114.114
 server=/miui.com/114.114.114.114
 server=/miuiver.com/114.114.114.114
+server=/miulab.com/114.114.114.114
 server=/miusi.co/114.114.114.114
 server=/miuss.icu/114.114.114.114
 server=/miutour.com/114.114.114.114
