--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -39718,6 +39718,7 @@ server=/hanmaidj.com/114.114.114.114
 server=/hanmaker.com/114.114.114.114
 server=/hanmara.com/114.114.114.114
 server=/hanmeilin.com/114.114.114.114
+server=/hanmembrane.com/114.114.114.114
 server=/hanming.cc/114.114.114.114
 server=/hanmozhai.com/114.114.114.114
 server=/hanniulaser.com/114.114.114.114
