accelerated-domains: add hzrlciec.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45190,6 +45190,7 @@ server=/hzredream.com/114.114.114.114
 server=/hzrib.com/114.114.114.114
 server=/hzriyue.com/114.114.114.114
 server=/hzrjkf.com/114.114.114.114
+server=/hzrlciec.com/114.114.114.114
 server=/hzrobam.com/114.114.114.114
 server=/hzrqgf.com/114.114.114.114
 server=/hzrsl.com/114.114.114.114
