accelerated-domains: add hlzzkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42158,6 +42158,7 @@ server=/hlyy8.com/114.114.114.114
 server=/hlzaojia.com/114.114.114.114
 server=/hlzq.com/114.114.114.114
 server=/hlzqgs.com/114.114.114.114
+server=/hlzzkj.com/114.114.114.114
 server=/hm-3223.net/114.114.114.114
 server=/hm-optics.com/114.114.114.114
 server=/hm025.com/114.114.114.114
