--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45036,6 +45036,7 @@ server=/hzctxh.com/114.114.114.114
 server=/hzcybb.xyz/114.114.114.114
 server=/hzdajiangdong.com/114.114.114.114
 server=/hzddwk.com/114.114.114.114
+server=/hzdelian.com/114.114.114.114
 server=/hzdely.com/114.114.114.114
 server=/hzdgjc.com/114.114.114.114
 server=/hzdjr.com/114.114.114.114
