accelerated-domains: add liuziyoudu.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -56872,6 +56872,7 @@ server=/liuzhourm.com/114.114.114.114
 server=/liuzhousteel.com/114.114.114.114
 server=/liuzhuni.com/114.114.114.114
 server=/liuzitang.com/114.114.114.114
+server=/liuziyoudu.com/114.114.114.114
 server=/liuzongyang.com/114.114.114.114
 server=/liuzy88.com/114.114.114.114
 server=/live-era.com/114.114.114.114
