accelerated-domains: add xiuluren.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92546,6 +92546,7 @@ server=/xiujiadian.com/114.114.114.114
 server=/xiujixia.com/114.114.114.114
 server=/xiulian.com/114.114.114.114
 server=/xiuluowang.com/114.114.114.114
+server=/xiuluren.com/114.114.114.114
 server=/xiulv.com/114.114.114.114
 server=/xiumb.com/114.114.114.114
 server=/xiumb12.com/114.114.114.114
