accelerated-domains: add yuhaochemical.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -98207,6 +98207,7 @@ server=/yuguowang.net/114.114.114.114
 server=/yugusoft.com/114.114.114.114
 server=/yuhaids.com/114.114.114.114
 server=/yuhaiyiya.com/114.114.114.114
+server=/yuhaochemical.com/114.114.114.114
 server=/yuhaotime.com/114.114.114.114
 server=/yuhaozhixing.com/114.114.114.114
 server=/yuheii.com/114.114.114.114
