--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -30827,6 +30827,7 @@ server=/faqingtie.com/114.114.114.114
 server=/far123.com/114.114.114.114
 server=/faraconix.com/114.114.114.114
 server=/faradayfuturecn.com/114.114.114.114
+server=/faradynamics.com/114.114.114.114
 server=/fareastcontainers.com/114.114.114.114
 server=/farenhui.com/114.114.114.114
 server=/farennews.com/114.114.114.114
