accelerated-domains: add bergerda.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -14187,6 +14187,7 @@ server=/bequw.com/114.114.114.114
 server=/bequwx.org/114.114.114.114
 server=/berens-china.com/114.114.114.114
 server=/berfen.com/114.114.114.114
+server=/bergerda.com/114.114.114.114
 server=/berlinchan.com/114.114.114.114
 server=/berlinix.com/114.114.114.114
 server=/bernouly.com/114.114.114.114
