--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45132,6 +45132,7 @@ server=/hzjywl.net/114.114.114.114
 server=/hzjzjc.com/114.114.114.114
 server=/hzjzmed.com/114.114.114.114
 server=/hzkaiming.com/114.114.114.114
+server=/hzkangji.com/114.114.114.114
 server=/hzkayo.com/114.114.114.114
 server=/hzkcck.com/114.114.114.114
 server=/hzkln.com/114.114.114.114
