accelerated-domains: add qucanzhan.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -70519,6 +70519,7 @@ server=/qucaiad.com/114.114.114.114
 server=/qucaidd.com/114.114.114.114
 server=/qucaigg.com/114.114.114.114
 server=/qucaiti.com/114.114.114.114
+server=/qucanzhan.com/114.114.114.114
 server=/quce001.com/114.114.114.114
 server=/quceaiqing.com/114.114.114.114
 server=/quchao.net/114.114.114.114
