accelerated-domains: add dechlogi.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -25491,6 +25491,7 @@ server=/decard.com/114.114.114.114
 server=/decent-china.com/114.114.114.114
 server=/decentcapital.com/114.114.114.114
 server=/decerp.cc/114.114.114.114
+server=/dechlogi.com/114.114.114.114
 server=/dechong.site/114.114.114.114
 server=/dechua.com/114.114.114.114
 server=/declous.com/114.114.114.114
