--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -35642,6 +35642,7 @@ server=/gsfzb.com/114.114.114.114
 server=/gsgdsgh.cfd/114.114.114.114
 server=/gsgs10086.com/114.114.114.114
 server=/gsgundam.com/114.114.114.114
+server=/gshangju.com/114.114.114.114
 server=/gshei.com/114.114.114.114
 server=/gshmhotels.com/114.114.114.114
 server=/gshmzs.com/114.114.114.114
