accelerated-domains: add hzdare.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45039,6 +45039,7 @@ server=/hzcphotonics.com/114.114.114.114
 server=/hzctxh.com/114.114.114.114
 server=/hzcybb.xyz/114.114.114.114
 server=/hzdajiangdong.com/114.114.114.114
+server=/hzdare.com/114.114.114.114
 server=/hzddwk.com/114.114.114.114
 server=/hzdelian.com/114.114.114.114
 server=/hzdely.com/114.114.114.114
