accelerated-domains: add sci-inv.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -73513,6 +73513,7 @@ server=/sci-gz.com/114.114.114.114
 server=/sci-hub.ee/114.114.114.114
 server=/sci-hub.ren/114.114.114.114
 server=/sci-hub.shop/114.114.114.114
+server=/sci-inv.com/114.114.114.114
 server=/sci99.com/114.114.114.114
 server=/scichina.com/114.114.114.114
 server=/scicn.net/114.114.114.114
