accelerated-domains: add hofcc.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -42570,6 +42570,7 @@ server=/hodiasflavor.com/114.114.114.114
 server=/hodo170.com/114.114.114.114
 server=/hodoop.com/114.114.114.114
 server=/hoehub.com/114.114.114.114
+server=/hofcc.com/114.114.114.114
 server=/hogatoga.net/114.114.114.114
 server=/hogesoft.com/114.114.114.114
 server=/hogon17.com/114.114.114.114
