--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -44195,6 +44195,7 @@ server=/huiqk.com/114.114.114.114
 server=/huiqudsp.com/114.114.114.114
 server=/huiqunchina.com/114.114.114.114
 server=/huiquzu.com/114.114.114.114
+server=/huirde.com/114.114.114.114
 server=/huiris.com/114.114.114.114
 server=/huiruanzhuang.com/114.114.114.114
 server=/huirui-tech.com/114.114.114.114
