--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45040,6 +45040,7 @@ server=/hzcnc.com/114.114.114.114
 server=/hzcopyright.com/114.114.114.114
 server=/hzcourse.com/114.114.114.114
 server=/hzcphotonics.com/114.114.114.114
+server=/hzctjs.com/114.114.114.114
 server=/hzctxh.com/114.114.114.114
 server=/hzcybb.xyz/114.114.114.114
 server=/hzdajiangdong.com/114.114.114.114
