--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45067,6 +45067,7 @@ server=/hzeyun.com/114.114.114.114
 server=/hzfc.cc/114.114.114.114
 server=/hzfeat.com/114.114.114.114
 server=/hzfeiyao.com/114.114.114.114
+server=/hzfesco.com/114.114.114.114
 server=/hzfj.com/114.114.114.114
 server=/hzfolo.com/114.114.114.114
 server=/hzfpay.com/114.114.114.114
