--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45190,6 +45190,7 @@ server=/hzou.net/114.114.114.114
 server=/hzpgc.com/114.114.114.114
 server=/hzpzs.net/114.114.114.114
 server=/hzqfy.com/114.114.114.114
+server=/hzqifei.com/114.114.114.114
 server=/hzqiuxue.com/114.114.114.114
 server=/hzqj.com/114.114.114.114
 server=/hzqjdz.net/114.114.114.114
