--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -49760,6 +49760,7 @@ server=/jingytech.com/114.114.114.114
 server=/jingyu.com/114.114.114.114
 server=/jingyuan.com/114.114.114.114
 server=/jingyuelaw.com/114.114.114.114
+server=/jingyunos.com/114.114.114.114
 server=/jingyunyilian.com/114.114.114.114
 server=/jingyuweike.com/114.114.114.114
 server=/jingyuxiaoban.com/114.114.114.114
