--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -52495,6 +52495,7 @@ server=/kalazan.com/114.114.114.114
 server=/kalcaddle.com/114.114.114.114
 server=/kalegou.com/114.114.114.114
 server=/kalifang.com/114.114.114.114
+server=/kalugaqueen.com/114.114.114.114
 server=/kaluli.com/114.114.114.114
 server=/kamenwang.com/114.114.114.114
 server=/kami.vip/114.114.114.114
