accelerated-domains: add versolsolar.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -85542,6 +85542,7 @@ server=/verisilicon.com/114.114.114.114
 server=/verisyno.com/114.114.114.114
 server=/verodillan.com/114.114.114.114
 server=/versa-ai.com/114.114.114.114
+server=/versolsolar.com/114.114.114.114
 server=/versoventure.com/114.114.114.114
 server=/vertciot.com/114.114.114.114
 server=/vertical-china.com/114.114.114.114
