accelerated-domains: add zetacn.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -99751,6 +99751,7 @@ server=/zeshengtecphar.com/114.114.114.114
 server=/zesidasi.com/114.114.114.114
 server=/zesmob.com/114.114.114.114
 server=/zeststore.com/114.114.114.114
+server=/zetacn.com/114.114.114.114
 server=/zetaijituan.com/114.114.114.114
 server=/zetast.com/114.114.114.114
 server=/zettlernb.com/114.114.114.114
