accelerated-domains: add iqimengkj.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -47358,6 +47358,7 @@ server=/iqidian.com/114.114.114.114
 server=/iqihang.com/114.114.114.114
 server=/iqilu.com/114.114.114.114
 server=/iqilun.com/114.114.114.114
+server=/iqimengkj.com/114.114.114.114
 server=/iqinbao.com/114.114.114.114
 server=/iqing.com/114.114.114.114
 server=/iqingguo.com/114.114.114.114
