accelerated-domains: add lanyuncloud.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -54893,6 +54893,7 @@ server=/lanxum.com/114.114.114.114
 server=/lanying.site/114.114.114.114
 server=/lanyingwang.com/114.114.114.114
 server=/lanyunbrand.com/114.114.114.114
+server=/lanyuncloud.com/114.114.114.114
 server=/lanyuncms.com/114.114.114.114
 server=/lanyunone.com/114.114.114.114
 server=/lanyus.com/114.114.114.114
