--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45278,6 +45278,7 @@ server=/hzxbcs.com/114.114.114.114
 server=/hzxddt.com/114.114.114.114
 server=/hzxdship.com/114.114.114.114
 server=/hzxhgy.com/114.114.114.114
+server=/hzxiangbin.com/114.114.114.114
 server=/hzxiangshang.com/114.114.114.114
 server=/hzxinglong-ip.com/114.114.114.114
 server=/hzxinshen.com/114.114.114.114
