accelerated-domains: add powerstonetech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -68056,6 +68056,7 @@ server=/powerma.net/114.114.114.114
 server=/powermaxcorp.com/114.114.114.114
 server=/powerskystudio.com/114.114.114.114
 server=/powerstationofart.com/114.114.114.114
+server=/powerstonetech.com/114.114.114.114
 server=/powertensors.ai/114.114.114.114
 server=/powertradepro.com/114.114.114.114
 server=/powervision.me/114.114.114.114
