accelerated-domains: add weijizongbao.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -87469,6 +87469,7 @@ server=/weijingzhijia.com/114.114.114.114
 server=/weijinsuo.com/114.114.114.114
 server=/weijiu.org/114.114.114.114
 server=/weijiuxin.com/114.114.114.114
+server=/weijizongbao.com/114.114.114.114
 server=/weijj.com/114.114.114.114
 server=/weijq.com/114.114.114.114
 server=/weiju.net/114.114.114.114
