accelerated-domains: add xiongmaitech.com

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -92481,6 +92481,7 @@ server=/xiongdong.com/114.114.114.114
 server=/xiongf.com/114.114.114.114
 server=/xiongfengcl.com/114.114.114.114
 server=/xiongge.club/114.114.114.114
+server=/xiongmaitech.com/114.114.114.114
 server=/xiongmao555.com/114.114.114.114
 server=/xiongmao789.com/114.114.114.114
 server=/xiongmaodangao.com/114.114.114.114
