--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45111,6 +45111,7 @@ server=/hzhssy.com/114.114.114.114
 server=/hzhstb.com/114.114.114.114
 server=/hzhtlh.com/114.114.114.114
 server=/hzhuang.wang/114.114.114.114
+server=/hzhuning.com/114.114.114.114
 server=/hzhx.com/114.114.114.114
 server=/hzhyqp.com/114.114.114.114
 server=/hzimc.com/114.114.114.114
