accelerated-domains: add hzjdi.net

--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45122,6 +45122,7 @@ server=/hzjbzg.com/114.114.114.114
 server=/hzjcbg.com/114.114.114.114
 server=/hzjcp.com/114.114.114.114
 server=/hzjcqczl.com/114.114.114.114
+server=/hzjdi.net/114.114.114.114
 server=/hzjiantong.com/114.114.114.114
 server=/hzjiaro.com/114.114.114.114
 server=/hzjie7.com/114.114.114.114
