--- a/accelerated-domains.china.conf
+++ b/accelerated-domains.china.conf
@@ -45153,6 +45153,7 @@ server=/hzklyy.com/114.114.114.114
 server=/hzkshx.com/114.114.114.114
 server=/hzkuangxiangzi.com/114.114.114.114
 server=/hzlange.com/114.114.114.114
+server=/hzleaper.com/114.114.114.114
 server=/hzleshun.com/114.114.114.114
 server=/hzliangdong.com/114.114.114.114
 server=/hzlingxing.com/114.114.114.114
